--- a/src/assets/scss/_mixins.scss
+++ b/src/assets/scss/_mixins.scss
@@ -1,6 +1,5 @@
 @use './variables.scss' as *;
 
-// Typography mixins with responsive scaling
 @mixin h1 {
   font-size: $h1;
   line-height: $line-height-tight;
@@ -85,7 +84,6 @@
   font-weight: 600;
 }
 
-// Utility mixins
 @mixin focus-visible {
   outline: 2px solid var(--focus-ring);
   outline-offset: 2px;
@@ -100,6 +98,7 @@
 @mixin line-clamp($lines: 2) {
   display: -webkit-box;
   -webkit-line-clamp: $lines;
+  line-clamp: $lines;
   -webkit-box-orient: vertical;
   overflow: hidden;
 }
